<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="start"
      android:text="@string/length_text" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="30dp"
      android:layout_weight="1"
      android:gravity="end"
      android:text="@string/luhn_text" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/tv_length"
      style="@style/valueTextAction"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="13dp"
      android:layout_weight="1"
      android:gravity="start"
      android:text="16" />

    <RadioGroup
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="end"
      android:orientation="horizontal">

      <RadioButton
        android:id="@+id/rb_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:text="@string/yes_rbt"
        android:textColor="@color/prepaid_selector" />

      <RadioButton
        android:id="@+id/rb_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:text="@string/no_rbt"
        android:textColor="@color/prepaid_selector" />

    </RadioGroup>
  </LinearLayout>
</LinearLayout>