<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:baselineAligned="false"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="horizontal">

  <LinearLayout
    android:id="@+id/ll_brand"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/ll_type">

    <TextView
      style="@style/titleText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="13dp"
      android:text="@string/brand_text" />

    <TextView
      android:id="@+id/tv_brand"
      style="@style/valueTextAction"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Visa/Dankort" />
  </LinearLayout>


  <LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
      style="@style/titleText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/prepaid_text" />

    <RadioGroup
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:tabMode="fixed"
      app:tabSelectedTextColor="@color/base_black"
      app:tabTextColor="@color/title_color">

      <RadioButton
        android:id="@+id/rb_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:checked="true"
        android:gravity="center"
        android:text="@string/yes_rbt"
        android:textColor="@color/prepaid_selector"
        android:textSize="11sp" />

      <RadioButton
        android:id="@+id/rb_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:gravity="center"
        android:text="@string/no_rbt"
        android:textColor="@color/prepaid_selector"
        android:textSize="11sp" />

    </RadioGroup>
  </LinearLayout>
</LinearLayout>